0.0.4
1st release

0.0.5
Added case insensitive search.
Function menu updated on save file.
Added revert.
Added GUI for Prefs.
Added save state of search sensitive to rc file.
Added teminal command to prefs.
Code clean.
Bug Fix.
Updated Help file.

0.0.6
Added wrap for search replace.
Dim function menu when no functions available.
Apply prefs immedietly.
Added save search wrap mode
Removed 'Save-As' from toolbar.

0.0.7
Added save/restore session