@@ -21,3 +21,4 @@ Removed 'Save-As' from toolbar.
 
 0.0.7
 Added save/restore session
+Added simple bookmark
